fix: spacing and mobile responsive changes

--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -49,7 +49,7 @@
 
     .main {
         width: 100%;
-        font-size: 20px;
+        font-size: 16px;
         font-weight: bold;
         color: #0F172B;
         padding: 10px 20px;
@@ -215,6 +215,20 @@
     &::before {
         width: 100%;
         left: 0;
+    }
+}
+
+.sticky-top.navbar.navbar .navbar-nav .nav-link:hover,
+.sticky-top.navbar.navbar .navbar-nav .nav-link.active {
+    color: $primary !important;
+
+    // border-bottom: 5px solid $primary;
+    // border-bottom-width: 100% ;
+    // transition: border-bottom-width 0.3s ease;
+    &::before {
+        width: 100%;
+        left: 0;
+        background: $primary !important;
     }
 }
 
