--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1066,13 +1066,15 @@
 /// choose container ///
 
 .choose_container {
-  display: grid;
+  // display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
   padding: 20px;
 }
 
 .choose_card {
+  max-width: 300px;
+  min-height: 330px !important;
   background-color: #ffffff;
   // border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -1080,6 +1082,7 @@
   text-align: left;
   position: relative;
   transition: transform 0.3s ease;
+  border-radius: 0px !important;
 }
 
 .choose_card::before {
@@ -1635,6 +1638,10 @@
   gap: 15px;
   transition: transform 0.3s ease;
 
+  p {
+    font-size: 14px;
+  }
+
 &:nth-child(2),
 &:nth-child(3) {
   background-color: $primary_two;
@@ -1645,6 +1652,9 @@
  &:nth-child(2),
 &:nth-child(4) {
   background-color: $primary_two;
+} 
+&:nth-child(3) {
+  background-color: $primary;
 } 
 }
 }
