--- a/src/styles.scss
+++ b/src/styles.scss
@@ -574,7 +574,7 @@ h4 {
   }
 
   @include sm {
-    padding: 20px 10px;
+    padding: 10px 10px;
   }
 
 }
